<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.ProductManagement.EditProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPureWhite"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/back_button_description"
            android:onClick="cancelEditProduct"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/colorDarkBlackText" />

        <TextView
            android:id="@+id/textView_my_products"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@color/colorPureWhite"
            android:text="@string/edit_product_activity_heading"
            android:textColor="@color/colorDarkBlackText"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/edit_Product_ImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_product_image_description"
                android:maxWidth="1080dp"
                android:maxHeight="1080dp"
                android:minWidth="400dp"
                android:minHeight="400dp"
                android:onClick="changeProductImage"
                android:src="@drawable/upload_placeholder" />

            <TextView
                android:id="@+id/edit_Product_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="changeProductImage"
                android:padding="5dp"
                android:text="@string/edit_product_upload_item_photo_text"
                android:textColor="@color/colorDarkBlue"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_Product_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_product_name_text"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_Product_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_product_price_text"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:text="@string/add_product_category_text"
                    android:textColor="@color/colorDarkBlackText"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/edit_Product_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:entries="@array/product_category_array"
                    android:minHeight="30dp"
                    android:prompt="@string/add_product_category_text"
                    android:spinnerMode="dialog" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_Product_description"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_product_description_text"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidthFocused="2dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_edit_Product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/custom_button_2"
                    android:text="@string/edit_product_button_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:onClick="updateProduct"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/delete_product_button_text"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:onClick="deleteProduct"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>